
# cpp-engineering-log/CMakeLists.txt

cmake_minimum_required(VERSION 3.10)
project(LEETCODE-JOURNAL)

# CMake must look in these folders
add_subdirectory(0003_LongestSubstringWithoutRepeatingCharacters)
add_subdirectory(0009_PalindromeNumber)
add_subdirectory(0058_LengthofLastWord)
add_subdirectory(3110_ScoreOfAString)